Fixig Some Bugs
Fixing and resolve.
